--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,12 +8,13 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 1rem;
+  border: 1px solid red;
+  width: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .footer {
@@ -49,12 +50,11 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 1.2rem;
 }
 
 .title,
 .description {
-  text-align: center;
 }
 
 .description {
