--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
     min-height: 100vh;
-    padding: 0 0.5rem;
+    padding: 0.5rem;
     display: flex;
     width:100%;
     flex-direction: column;
@@ -9,13 +9,16 @@
 
 .header {
     display: flex;
+    padding: 0.5rem;
     width:100%;
     justify-content: space-between;
+    border: 2px solid silver;
+    border-bottom-width: 0;
 }
 
 .main {
     padding: 1rem;
-    border: 1px solid red;
+    border: 2px solid silver;
     width: 100%;
     flex: 1;
     display: flex;
@@ -25,8 +28,9 @@
 
 .footer {
     width: 100%;
-    height: 100px;
-    border-top: 1px solid #eaeaea;
+    border: 2px solid silver;
+    background: silver;
+    border-top-width: 0;
     display: flex;
     justify-content: center;
     align-items: center;
